--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -3,5 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bg">#151515</color>
-    <color name="hint_color">#F2F2F3</color>
+    <color name="hint_color">#80F2F2F3</color>
+    <color name="main_green">#12B956</color>
+    <color name="item_bg">#24252A</color>
+    <color name="white_opacity_70">#B3F2F2F3</color>
 </resources>
