--- a/feature_auth/src/main/res/layout/fragment_auth.xml
+++ b/feature_auth/src/main/res/layout/fragment_auth.xml
@@ -92,12 +92,13 @@
                 android:text="@string/no_account_label"
                 android:textSize="12sp"
                 android:textStyle="bold"
-                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
                 android:textColor="@color/white"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:focusable="true"
                 android:text="@string/registration_label"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -109,6 +110,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:focusable="true"
             android:text="@string/forgot_password_label"
             android:textSize="12sp"
             android:layout_gravity="center"
