--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="main_green">#12B956</color>
     <color name="item_bg">#24252A</color>
     <color name="white_opacity_70">#B3F2F2F3</color>
+    <color name="nav_bar_default">#F2F2F3</color>
+    <color name="nav_bar_border">#4D555E</color>
 </resources>
