Реализация главного таба с загрузкой и отображением списков курсов

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -29,7 +29,7 @@
 
         <fragment
             android:id="@+id/mainScreenFragment"
-            android:name="com.example.feature_course.MainScreenFragment"
+            android:name="com.example.feature_course.mainscreen.CourseFragment"
             android:label="Home" />
 
         <fragment
