--- a/feature_course/src/main/res/layout/item_course.xml
+++ b/feature_course/src/main/res/layout/item_course.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="328dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="16dp">
+    app:cardCornerRadius="16dp"
+    tools:layout_marginBottom="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,6 +60,7 @@
                 tools:text="999 ₽"/>
             
             <TextView
+                android:id="@+id/tv_btn_detail_course"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/course_detail_btn"
