Добавление и удаление из избранного

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -34,7 +34,7 @@
 
         <fragment
             android:id="@+id/favouriteCourseFragment"
-            android:name="com.example.feature_course.FavouriteCourseFragment"
+            android:name="com.example.feature_course.favourite.FavouriteCourseFragment"
             android:label="Favorites" />
 
 <!--        <fragment-->
