--- a/feature_course/src/main/res/layout/fragment_main_screen.xml
+++ b/feature_course/src/main/res/layout/fragment_main_screen.xml
@@ -65,7 +65,7 @@
             android:drawableTint="@color/text_green_tint"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_main_course_list"
+            android:id="@+id/rv_main_courses_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
