--- a/feature_course/src/main/res/layout/fragment_favourite_course.xml
+++ b/feature_course/src/main/res/layout/fragment_favourite_course.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/bg"
-    tools:context=".FavouriteCourseFragment">
+    android:orientation="vertical"
+    tools:context=".favourite.FavouriteCourseFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:gravity="left"
         android:textColor="@color/white"
-        android:text="Favourite Course" />
+        android:padding="16dp"
+        android:textSize="22sp"
+        android:text="@string/favourite_fragment_label" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_favourite_courses_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_course" />
 
 </LinearLayout>
