--- a/app/src/main/res/color/bottom_nav_selector.xml
+++ b/app/src/main/res/color/bottom_nav_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/main_green" android:state_checked="true" />
-    <item android:color="@color/nav_bar_default" android:state_checked="false" />
+    <item android:color="@color/accent_primary" android:state_checked="true" />
+    <item android:color="@color/bottom_nav_default" android:state_checked="false" />
 </selector>
