--- a/core/src/main/res/color/btn_green_tint.xml
+++ b/core/src/main/res/color/btn_green_tint.xml
@@ -3,8 +3,8 @@
 
     <item
         android:state_enabled="false"
-        android:color="#387b53"/>
+        android:color="@color/accent_primary_disabled"/>
 
-    <item android:color="#12B956"/>
+    <item android:color="@color/accent_primary"/>
 
 </selector>
