--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -2,11 +2,19 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="bg">#151515</color>
-    <color name="hint_color">#80F2F2F3</color>
-    <color name="main_green">#12B956</color>
-    <color name="item_bg">#24252A</color>
-    <color name="white_opacity_70">#B3F2F2F3</color>
-    <color name="nav_bar_default">#F2F2F3</color>
-    <color name="nav_bar_border">#4D555E</color>
+
+    <color name="text_primary">#FFFFFFFF</color>
+
+    <color name="background_primary">#151515</color>
+    <color name="background_card">#24252A</color>
+
+    <color name="text_hint">#80F2F2F3</color>
+    <color name="accent_primary">#12B956</color>
+    <color name="accent_primary_disabled">#387b53</color>
+    <color name="accent_primary_pressed">#0e8d42</color>
+
+    <color name="text_secondary">#B3F2F2F3</color>
+    <color name="bottom_nav_default">#F2F2F3</color>
+    <color name="bottom_nav_border">#4D555E</color>
+    <color name="input_background">#32333A</color>
 </resources>
