--- a/feature_account/src/main/res/layout/fragment_account.xml
+++ b/feature_account/src/main/res/layout/fragment_account.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg"
+    android:background="@color/background_primary"
     tools:context=".AccountFragment">
 
     <!-- TODO: Update blank fragment layout -->
