--- a/feature_course/src/main/res/layout/fragment_main_screen.xml
+++ b/feature_course/src/main/res/layout/fragment_main_screen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/bg"
+    android:background="@color/background_primary"
     tools:context=".mainscreen.CourseFragment">
 
     <LinearLayout
@@ -25,14 +25,14 @@
                 android:layout_width="0dp"
                 android:layout_height="56dp"
                 android:background="@drawable/oval_bg"
-                android:backgroundTint="#24252A"
+                android:backgroundTint="@color/background_card"
                 android:hint="@string/search_courses_hint"
                 android:drawableStart="@drawable/search_icon"
                 android:drawablePadding="16dp"
                 android:paddingStart="16dp"
                 android:paddingTop="19dp"
                 android:paddingBottom="19dp"
-                android:textColorHint="@color/hint_color"
+                android:textColorHint="@color/text_hint"
                 android:textSize="14sp"
                 android:layout_weight="1" />
 
@@ -45,7 +45,7 @@
                 android:layout_width="56dp"
                 android:layout_height="56dp"
                 android:background="@drawable/oval_ripple"
-                android:backgroundTint="#24252A"
+                android:backgroundTint="@color/background_card"
                 android:src="@drawable/filter_btn_icon"
                 android:contentDescription="@null"/>
 
