--- a/feature_course/src/main/res/layout/item_course.xml
+++ b/feature_course/src/main/res/layout/item_course.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="#24252A">
+        android:background="@color/background_card">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -37,7 +37,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
                 android:textSize="12sp"
-                android:textColor="@color/white"
+                android:textColor="@color/text_primary"
                 android:drawableLeft="@drawable/green_star"
                 android:drawablePadding="4dp"
                 android:paddingHorizontal="6dp"
@@ -54,7 +54,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="4dp"
                 android:textSize="12sp"
-                android:textColor="@color/white"
+                android:textColor="@color/text_primary"
                 android:paddingHorizontal="6dp"
                 android:paddingVertical="4dp"
                 android:background="@drawable/bg_glass"
@@ -93,7 +93,7 @@
                 android:id="@+id/tvCourseDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white_opacity_70"
+                android:textColor="@color/text_secondary"
                 android:textSize="12sp"
                 app:layout_constraintTop_toBottomOf="@id/tvCourseName"
                 android:layout_marginTop="12dp"
@@ -106,7 +106,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
-                android:textColor="@color/white"
+                android:textColor="@color/text_primary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvCourseDescription"
