--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="background_card">#24252A</color>
 
     <color name="text_hint">#80F2F2F3</color>
+    <color name="nav_item_select">#32333A</color>
     <color name="accent_primary">#12B956</color>
     <color name="accent_primary_disabled">#387b53</color>
     <color name="accent_primary_pressed">#0e8d42</color>
