--- a/feature_course/src/main/res/layout/fragment_main_screen.xml
+++ b/feature_course/src/main/res/layout/fragment_main_screen.xml
@@ -31,6 +31,7 @@
                 android:drawablePadding="16dp"
                 android:paddingStart="16dp"
                 android:paddingTop="19dp"
+                android:textColor="@color/text_primary"
                 android:paddingBottom="19dp"
                 android:textColorHint="@color/text_hint"
                 android:textSize="14sp"
